--- a/src/App.css
+++ b/src/App.css
@@ -17,25 +17,39 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
 .card {
-  padding: 2em;
+  width: 270px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .read-the-docs {
   color: #888;
+}
+
+.avatar {
+  width: 220px;
+  border: 1a1a1a solid 1px;
+  box-shadow: rgba(0, 0, 0, 0.65) 5px 10px;
+  border-radius: 50%;
+  filter: opacity(0.85);
+}
+
+h2 {
+  font-size: 1.5rem;
+  text-shadow: rgba(0, 0, 0, 0.65) 3px 3px;
+}
+.count-down {
+  width: 220px;
+  border: solid 4px #000;
+  box-shadow: rgba(0, 0, 0, 0.65) 8px 6px;
+  background: rgb(131, 58, 180);
+  background: linear-gradient(
+    90deg,
+    rgba(131, 58, 180, 1) 0%,
+    rgba(253, 29, 29, 1) 50%,
+    rgba(252, 176, 69, 1) 100%
+  );
 }
